yaml-examples/labels.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod

  labels:
    app: nginx
    env: production
    tier: frontend

spec:
  containers:
  - name: nginx
    image: nginx:latest
