yaml-examples/probes.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-probe

spec:
  containers:
  - name: nginx
    image: nginx:latest

    ports:
    - containerPort: 80

    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 5

    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
