yaml-examples/resource-limits.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-resource-demo

spec:
  containers:
  - name: nginx
    image: nginx:latest

    resources:
      requests:
        cpu: "250m"
        memory: "256Mi"

      limits:
        cpu: "500m"
        memory: "512Mi"
